--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star" id="1"></i></li>
+        		<li><i class="fa fa-star" id="2"></i></li>
+        		<li><i class="fa fa-star" id="3"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves"></span> Moves
+
+            <div class="timer">Timer
+              <i class="fa fa-clock-o"></i>
+            </div>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -37,7 +41,7 @@
             <li class="card">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card match">
+            <li class="card">
                 <i class="fa fa-anchor"></i>
             </li>
             <li class="card">
@@ -46,7 +50,7 @@
             <li class="card">
                 <i class="fa fa-cube"></i>
             </li>
-            <li class="card match">
+            <li class="card">
                 <i class="fa fa-anchor"></i>
             </li>
             <li class="card">
