--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 
         	<span class="moves"></span> Moves
 
-            <div class="timer">Timer
-              <i class="fa fa-clock-o"></i>
-            </div>
+            <span class="timer">Timer
+            </span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
