--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-
     <div class="container">
         <header>
             <h1>Matching Game</h1>
@@ -25,13 +24,11 @@
         	</ul>
 
         	<span class="moves"></span> Moves
-
-            <span class="timer">Timer
-            </span>
+          <span class="timer">Timer</span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
-        	</div>
+        	  </div>
         </section>
 
         <ul class="deck">
@@ -85,7 +82,6 @@
             </li>
         </ul>
     </div>
-
     <script src="app.js"></script>
 </body>
 </html>
