--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
+    </div
+        
+    <div id="dialog" title="Congratulations, you won!">
+      <p id="message"><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span></p>
     </div>
+    
     <script src="app.js"></script>
 </body>
 </html>
