--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
+
     <div class="container">
         <header>
             <h1>Matching Game</h1>
@@ -83,12 +84,12 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
-    </div
-        
+    </div>
+
     <div id="dialog" title="Congratulations, you won!">
       <p id="message"><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span></p>
     </div>
-    
+
     <script src="app.js"></script>
 </body>
 </html>
